last change of method name

--- a/examples/batching_example.ipynb
+++ b/examples/batching_example.ipynb
@@ -91,7 +91,7 @@
         "    n_draws=1000,\n",
         "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
         "    batch_size=None,\n",
-        "    optim_method=\"L-BFGS-B-scipy\",\n",
+        "    optim_method=\"L-BFGS-scipy\",\n",
         "    maxiter=100,\n",
         ")\n",
         "\n",
@@ -120,7 +120,7 @@
         "    n_draws=n_draws,\n",
         "    # skip_std_errs=True,  # skip standard errors to speed up the example\n",
         "    batch_size=1077,  # should result in 4 batches\n",
-        "    optim_method=\"L-BFGS-B-scipy\",\n",
+        "    optim_method=\"L-BFGS-scipy\",\n",
         ")\n",
         "\n",
         "res = model.fit(\n",
@@ -147,7 +147,7 @@
         "    panels=df['id'],\n",
         "    n_draws=n_draws,\n",
         "    skip_std_errs=True,  # skip standard errors to speed up the example\n",
-        "    optim_method=\"L-BFGS-B-scipy\",\n",
+        "    optim_method=\"L-BFGS-scipy\",\n",
         "    batch_size=539,\n",
         ")\n",
         "\n",
