add append graph data and timing selects minimum

--- a/examples/graphs/comparison_graphs_memory.ipynb
+++ b/examples/graphs/comparison_graphs_memory.ipynb
@@ -288,8 +288,18 @@
     "import json\n",
     "\n",
     "# Dump all of rdf_fit\n",
-    "list = rdf_fit.values.tolist()\n",
-    "with open(\"comparison_data_mem.json\", \"w\") as f:\n",
+    "# list = rdf_fit.values.tolist()\n",
+    "# with open(\"comparison_data_mem.json\", \"w\") as f:\n",
+    "#     json.dump(list, f)\n",
+    "\n",
+    "# Append all of rdf_fit\n",
+    "with open(\"comparison_data_timing.json\", \"r\") as f:\n",
+    "    fit_data = json.load(f)\n",
+    "rdf = pd.DataFrame(fit_data)\n",
+    "rdf.columns = [\"package\", \"draws\", \"time\"]\n",
+    "rdf = pd.concat([rdf, rdf_fit], ignore_index=True)\n",
+    "list = rdf.values.tolist()\n",
+    "with open(\"comparison_data_timing.json\", \"w\") as f:\n",
     "    json.dump(list, f)\n",
     "\n",
     "# Retrieve all of rdf_fit\n",
