add better names to graphs and remove old graphs

--- a/examples/graphs/comparison_graphs_memory.ipynb
+++ b/examples/graphs/comparison_graphs_memory.ipynb
@@ -286,30 +286,31 @@
    "outputs": [],
    "source": [
     "import json\n",
+    "import pandas as pd\n",
     "\n",
     "# Dump all of rdf_fit\n",
     "# list = rdf_fit.values.tolist()\n",
-    "# with open(\"comparison_data_mem.json\", \"w\") as f:\n",
+    "# with open(\"comparison_data_memory.json\", \"w\") as f:\n",
     "#     json.dump(list, f)\n",
     "\n",
     "# Append all of rdf_fit\n",
-    "with open(\"comparison_data_timing.json\", \"r\") as f:\n",
-    "    fit_data = json.load(f)\n",
-    "rdf = pd.DataFrame(fit_data)\n",
-    "rdf.columns = [\"package\", \"draws\", \"time\"]\n",
-    "rdf = pd.concat([rdf, rdf_fit], ignore_index=True)\n",
-    "list = rdf.values.tolist()\n",
-    "with open(\"comparison_data_timing.json\", \"w\") as f:\n",
-    "    json.dump(list, f)\n",
-    "\n",
-    "# Retrieve all of rdf_fit\n",
-    "# with open(\"comparison_data_fit.json\", \"r\") as f:\n",
+    "# with open(\"comparison_data_memory.json\", \"r\") as f:\n",
     "#     fit_data = json.load(f)\n",
     "# rdf = pd.DataFrame(fit_data)\n",
     "# rdf.columns = [\"package\", \"draws\", \"time\"]\n",
     "# rdf = pd.concat([rdf, rdf_fit], ignore_index=True)\n",
+    "# list = rdf.values.tolist()\n",
+    "# with open(\"comparison_data_memory.json\", \"w\") as f:\n",
+    "#     json.dump(list, f)\n",
     "\n",
-    "# # print(rdf_fit)"
+    "# Retrieve all of rdf_fit\n",
+    "with open(\"comparison_data_memory.json\", \"r\") as f:\n",
+    "    fit_data = json.load(f)\n",
+    "rdf = pd.DataFrame(fit_data)\n",
+    "rdf.columns = [\"package\", \"memory\"]\n",
+    "# rdf = pd.concat([rdf, rdf_fit], ignore_index=True)\n",
+    "\n",
+    "print(rdf)"
    ]
   },
   {
@@ -320,9 +321,18 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "names_dict = {\"jaxlogit_scipy\": \"Jaxlogit using L-BFGS-scipy\",\n",
+    "              \"jaxlogit_scipy_b\": \"Jaxlogit using BFGS-scipy\",\n",
+    "              \"jaxlogit_jax\": \"Jaxlogit using L-BFGS-jax\",\n",
+    "              \"jaxlogit_jax_b\": \"Jaxlogit using BFGS-jax\",\n",
+    "              \"xlogit\": \"Xlogit\",\n",
+    "              \"biogeme\": \"Biogeme\",\n",
+    "              \"jaxlogit_scipy_batched\": \"Jaxlogit using L-BFGS-scipy and batching\",\n",
+    "              \"jaxlogit_scipy_b_batched\": \"Jaxlogit using BFGS-scipy and batching\"\n",
+    "              }\n",
     "\n",
-    "for (name, mem) in rdf_fit:\n",
-    "    plt.plot(mem, label=name)\n",
+    "for index, row in rdf.iterrows():\n",
+    "    plt.plot(row[\"memory\"], label=names_dict[row[\"package\"]])\n",
     "plt.xlim(left=0)\n",
     "plt.xlabel(\"Time (samples)\")\n",
     "plt.ylabel(\"Memory (MB)\")\n",
@@ -330,6 +340,25 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.savefig(\"memory_comparison\", bbox_inches=\"tight\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "254f04a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index, row in rdf.iterrows():\n",
+    "    plt.plot(row[\"memory\"], label=names_dict[row[\"package\"]])\n",
+    "plt.xlim(left=0, right=30)\n",
+    "plt.xlabel(\"Time (samples)\")\n",
+    "plt.ylabel(\"Memory (MB)\")\n",
+    "plt.title(\"Memory Usage Over Time\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.savefig(\"memory_comparison_cropped\", bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   }
