--- a/examples/graphs/comparison_graphs_timing.ipynb
+++ b/examples/graphs/comparison_graphs_timing.ipynb
@@ -374,21 +374,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe2b7b79",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib\n",
-    "matplotlib.rcParams.update({'font.size': 14,\n",
-    "                            'axes.spines.right': False,\n",
-    "                            'axes.spines.top': False})\n",
-    "libs = ['jaxlogit_scipy', 'jaxlogit_scipy_b', 'jaxlogit_jax', 'jaxlogit_jax_b', 'jaxlogit_scipy_batched', 'jaxlogit_scipy_b_batched', 'xlogit', 'biogeme']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "f9a04a9d",
    "metadata": {},
    "outputs": [],
@@ -416,6 +401,21 @@
     "    fit_data = json.load(f)\n",
     "rdf = pd.DataFrame(fit_data)\n",
     "rdf.columns = [\"package\", \"draws\", \"time\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe2b7b79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams.update({'font.size': 14,\n",
+    "                            'axes.spines.right': False,\n",
+    "                            'axes.spines.top': False})\n",
+    "libs = ['jaxlogit_scipy', 'jaxlogit_scipy_b', 'jaxlogit_jax', 'jaxlogit_jax_b', 'jaxlogit_scipy_batched', 'jaxlogit_scipy_b_batched', 'xlogit', 'biogeme']"
    ]
   },
   {
@@ -449,10 +449,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "names_dict = {\"jaxlogit_scipy\": \"Jaxlogit using L-BFGS-scipy\",\n",
+    "              \"jaxlogit_scipy_b\": \"Jaxlogit using BFGS-scipy\",\n",
+    "              \"jaxlogit_jax\": \"Jaxlogit using L-BFGS-jax\",\n",
+    "              \"jaxlogit_jax_b\": \"Jaxlogit using BFGS-jax\",\n",
+    "              \"xlogit\": \"Xlogit\",\n",
+    "              \"biogeme\": \"Biogeme\",\n",
+    "              \"jaxlogit_scipy_batched\": \"Jaxlogit using L-BFGS-scipy and batching\",\n",
+    "              \"jaxlogit_scipy_b_batched\": \"Jaxlogit using BFGS-scipy and batching\"\n",
+    "              }\n",
+    "\n",
     "def plot(df, name):\n",
     "    for lib in libs:\n",
     "        rdf = df.loc[df[\"package\"] == lib]\n",
-    "        plt.plot(rdf[\"draws\"], rdf[\"time\"], label=lib)\n",
+    "        plt.plot(rdf[\"draws\"], rdf[\"time\"], label=names_dict[lib])\n",
     "    plt.legend(bbox_to_anchor=(1, 1))\n",
     "    plt.xlabel(\"Random draws\")\n",
     "    plt.ylabel(\"Time (Seconds)\")\n",
