make graphs less busy

--- a/examples/graphs/comparison_graphs_memory.ipynb
+++ b/examples/graphs/comparison_graphs_memory.ipynb
@@ -330,6 +330,7 @@
     "              \"jaxlogit_scipy_batched\": \"Jaxlogit using L-BFGS-scipy and batching\",\n",
     "              \"jaxlogit_scipy_b_batched\": \"Jaxlogit using BFGS-scipy and batching\"\n",
     "              }\n",
+    "include = [\"jaxlogit_scipy\", \"jaxlogit_jax\", \"xlogit\", \"biogeme\", \"jaxlogit_scipy_batched\"]\n",
     "\n",
     "for index, row in rdf.iterrows():\n",
     "    plt.plot(row[\"memory\"], label=names_dict[row[\"package\"]])\n",
@@ -337,8 +338,7 @@
     "plt.xlabel(\"Time (samples)\")\n",
     "plt.ylabel(\"Memory (MB)\")\n",
     "plt.title(\"Memory Usage Over Time\")\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
+    "plt.legend(bbox_to_anchor=(1, 1))\n",
     "plt.savefig(\"memory_comparison\", bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
@@ -351,13 +351,15 @@
    "outputs": [],
    "source": [
     "for index, row in rdf.iterrows():\n",
+    "    if row[\"package\"] not in include:\n",
+    "        continue\n",
     "    plt.plot(row[\"memory\"], label=names_dict[row[\"package\"]])\n",
     "plt.xlim(left=0, right=30)\n",
+    "plt.ylim(top=15000)\n",
     "plt.xlabel(\"Time (samples)\")\n",
     "plt.ylabel(\"Memory (MB)\")\n",
     "plt.title(\"Memory Usage Over Time\")\n",
-    "plt.legend()\n",
-    "plt.grid(True)\n",
+    "plt.legend(bbox_to_anchor=(1, 0.6))\n",
     "plt.savefig(\"memory_comparison_cropped\", bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
