Add different dataset

--- a/examples/graphs/comparison_graphs_timing.ipynb
+++ b/examples/graphs/comparison_graphs_timing.ipynb
@@ -98,11 +98,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dafdbf8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_long = pd.read_csv(pathlib.Path.cwd().parent / \"electricity_long.csv\") # Electricity Dataset\n",
+    "df_long = pd.read_csv(\"https://raw.githubusercontent.com/arteagac/xlogit/master/examples/data/artificial_long.csv\") # Artificial Long used by xlogit benchmarking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "45c2f4fc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_long = pd.read_csv(pathlib.Path.cwd().parent.parent / \"examples\" / \"electricity_long.csv\")\n",
     "choice_df = df_long.loc[df_long['choice'] == 1, ['id', 'chid', 'alt']]\n",
     "choice_df = choice_df.rename(columns={'alt': 'choice'})\n",
     "df_wide = df_long.pivot(index=['id', 'chid'], columns='alt', values=varnames)\n",
@@ -372,6 +382,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e4533637",
+   "metadata": {},
+   "source": [
+    "Note: watch whether dumping, appending, or retrieving data and which datafile is being used"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f9a04a9d",
@@ -382,9 +400,9 @@
     "import pandas as pd\n",
     "\n",
     "# # Dump all of rdf_fit\n",
-    "# list = rdf_fit.values.tolist()\n",
-    "# with open(\"comparison_data_timing.json\", \"w\") as f:\n",
-    "#     json.dump(list, f)\n",
+    "list = rdf_fit.values.tolist()\n",
+    "with open(\"comparison_data_timing_artificial.json\", \"w\") as f:\n",
+    "    json.dump(list, f)\n",
     "\n",
     "# Append all of rdf_fit\n",
     "# with open(\"comparison_data_timing.json\", \"r\") as f:\n",
@@ -397,10 +415,10 @@
     "#     json.dump(list, f)\n",
     "\n",
     "# Retrieve all of rdf_fit\n",
-    "with open(\"comparison_data_timing.json\", \"r\") as f:\n",
-    "    fit_data = json.load(f)\n",
-    "rdf = pd.DataFrame(fit_data)\n",
-    "rdf.columns = [\"package\", \"draws\", \"time\"]"
+    "# with open(\"comparison_data_timing.json\", \"r\") as f:\n",
+    "#     fit_data = json.load(f)\n",
+    "# rdf = pd.DataFrame(fit_data)\n",
+    "# rdf.columns = [\"package\", \"draws\", \"time\"]"
    ]
   },
   {
