--- a/examples/graphs/comparison_graphs_memory.ipynb
+++ b/examples/graphs/comparison_graphs_memory.ipynb
@@ -84,11 +84,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ce1f43f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_long = pd.read_csv(pathlib.Path.cwd().parent / \"electricity_long.csv\") # Electricity Dataset\n",
+    "df_long = pd.read_csv(\"https://raw.githubusercontent.com/arteagac/xlogit/master/examples/data/artificial_long.csv\") # Artificial Long used by xlogit benchmarking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "45c2f4fc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_long = pd.read_csv(pathlib.Path.cwd().parent / \"electricity_long.csv\")\n",
     "choice_df = df_long.loc[df_long['choice'] == 1, ['id', 'chid', 'alt']]\n",
     "choice_df = choice_df.rename(columns={'alt': 'choice'})\n",
     "df_wide = df_long.pivot(index=['id', 'chid'], columns='alt', values=varnames)\n",
@@ -279,6 +289,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "68abd6e0",
+   "metadata": {},
+   "source": [
+    "Note: watch whether dumping, appending, or retrieving data and which datafile is being used"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c53f5a59",
@@ -289,9 +307,9 @@
     "import pandas as pd\n",
     "\n",
     "# Dump all of rdf_fit\n",
-    "# list = rdf_fit.values.tolist()\n",
-    "# with open(\"comparison_data_memory.json\", \"w\") as f:\n",
-    "#     json.dump(list, f)\n",
+    "list = rdf_fit.values.tolist()\n",
+    "with open(\"comparison_data_memory_artificial.json\", \"w\") as f:\n",
+    "    json.dump(list, f)\n",
     "\n",
     "# Append all of rdf_fit\n",
     "# with open(\"comparison_data_memory.json\", \"r\") as f:\n",
@@ -304,10 +322,10 @@
     "#     json.dump(list, f)\n",
     "\n",
     "# Retrieve all of rdf_fit\n",
-    "with open(\"comparison_data_memory.json\", \"r\") as f:\n",
-    "    fit_data = json.load(f)\n",
-    "rdf = pd.DataFrame(fit_data)\n",
-    "rdf.columns = [\"package\", \"memory\"]\n",
+    "# with open(\"comparison_data_memory_artificial.json\", \"r\") as f:\n",
+    "#     fit_data = json.load(f)\n",
+    "# rdf = pd.DataFrame(fit_data)\n",
+    "# rdf.columns = [\"package\", \"memory\"]\n",
     "# rdf = pd.concat([rdf, rdf_fit], ignore_index=True)\n",
     "\n",
     "print(rdf)"
