Remove BFGS from graphs

--- a/examples/graphs/comparison_graphs_memory.ipynb
+++ b/examples/graphs/comparison_graphs_memory.ipynb
@@ -207,9 +207,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "combos = [('jaxlogit_scipy', \"L-BFGS-scipy\"), ('jaxlogit_scipy_b', \"BFGS-scipy\"), ('jaxlogit_jax', \"L-BFGS-jax\")]\n",
+    "combos = [('jaxlogit_scipy', \"L-BFGS-scipy\"), ('jaxlogit_jax', \"L-BFGS-jax\")]\n",
     "# no jax scipy batching, because it does not work.\n",
-    "combos_batched = [('jaxlogit_scipy_batched', \"L-BFGS-scipy\"), ('jaxlogit_scipy_b_batched', \"BFGS-scipy\")]"
+    "combos_batched = [('jaxlogit_scipy_batched', \"L-BFGS-scipy\")]"
    ]
   },
   {
