--- a/examples/graphs/comparison_graphs_timing.ipynb
+++ b/examples/graphs/comparison_graphs_timing.ipynb
@@ -229,8 +229,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "combos = [('jaxlogit_scipy', \"L-BFGS-scipy\"), ('jaxlogit_scipy_b', \"BFGS-scipy\"), ('jaxlogit_jax', \"L-BFGS-jax\"), ('jaxlogit_jax_b', \"BFGS-jax\")]\n",
-    "combos_batched = [('jaxlogit_scipy_batched', \"L-BFGS-scipy\"), ('jaxlogit_scipy_b_batched', \"BFGS-scipy\")]"
+    "combos = [('jaxlogit_scipy', \"L-BFGS-scipy\"), ('jaxlogit_jax', \"L-BFGS-jax\")]\n",
+    "combos_batched = [('jaxlogit_scipy_batched', \"L-BFGS-scipy\")]"
    ]
   },
   {
