fix artificial dataset usage in graphs

--- a/examples/graphs/comparison_graphs_memory.ipynb
+++ b/examples/graphs/comparison_graphs_memory.ipynb
@@ -54,6 +54,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c5f7b72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = False # True for electricity. Set to False for artificial"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "49263ce0",
    "metadata": {},
@@ -70,7 +80,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "varnames = ['pf', 'cl', 'loc', 'wk', 'tod', 'seas']"
+    "if dataset:\n",
+    "    varnames = ['pf', 'cl', 'loc', 'wk', 'tod', 'seas']\n",
+    "else:\n",
+    "    varnames = ['price', 'time', 'conven', 'comfort', 'meals', 'petfr', 'emipp', 'nonsig1', 'nonsig2', 'nonsig3']"
    ]
   },
   {
@@ -88,8 +101,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_long = pd.read_csv(pathlib.Path.cwd().parent / \"electricity_long.csv\") # Electricity Dataset\n",
-    "df_long = pd.read_csv(\"https://raw.githubusercontent.com/arteagac/xlogit/master/examples/data/artificial_long.csv\") # Artificial Long used by xlogit benchmarking"
+    "if dataset:\n",
+    "    df_long = pd.read_csv(pathlib.Path.cwd().parent / \"electricity_long.csv\") # Electricity Dataset\n",
+    "else:\n",
+    "    df_long = pd.read_csv(\"https://raw.githubusercontent.com/arteagac/xlogit/master/examples/data/artificial_long.csv\") # Artificial Long used by xlogit benchmarking"
    ]
   },
   {
@@ -99,26 +114,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "choice_df = df_long.loc[df_long['choice'] == 1, ['id', 'chid', 'alt']]\n",
+    "keys = ['id', 'chid', 'alt'] if dataset else ['id', 'alt']\n",
+    "choice_df = df_long.loc[df_long['choice'] == 1, keys]\n",
     "choice_df = choice_df.rename(columns={'alt': 'choice'})\n",
-    "df_wide = df_long.pivot(index=['id', 'chid'], columns='alt', values=varnames)\n",
+    "df_wide = df_long.pivot(index=keys[:-1], columns='alt', values=varnames)\n",
     "df_wide.columns = [f'{var}_{alt}' for var, alt in df_wide.columns]\n",
     "df_wide = df_wide.reset_index()\n",
     "df_wide = df_wide.merge(\n",
     "    choice_df,\n",
-    "    on=['id', 'chid'],\n",
+    "    on=keys[:-1],\n",
     "    how='inner',\n",
     "    validate='one_to_one'\n",
     ")\n",
     "\n",
-    "database_panel = db.Database('electricity', df_wide)\n",
-    "database_panel.panel('id')\n",
-    "database = db.Database('electricity', df_wide)\n",
+    "database = db.Database(dataset, df_wide)\n",
+    "if dataset:\n",
+    "    database.panel('id')\n",
     "\n",
-    "y = df_long['choice']\n",
-    "ids = df_long['chid']\n",
-    "alts = df_long['alt']\n",
-    "panels = df_long['id']"
+    "if dataset:\n",
+    "    y = df_long['choice']\n",
+    "    ids = df_long['chid']\n",
+    "    alts = df_long['alt']\n",
+    "    panels = df_long['id']\n",
+    "    randvars = {'pf': 'n', 'cl': 'n', 'loc': 'n', 'wk': 'n', 'tod': 'n', 'seas': 'n'}\n",
+    "else:\n",
+    "    y = df_long['choice']\n",
+    "    randvars = {'meals': 'n', 'petfr': 'n', 'emipp': 'n'}\n",
+    "    alts = df_long['alt']\n",
+    "    ids = df_long['id']\n",
+    "    panels = df_long['id']"
    ]
   },
   {
@@ -148,56 +172,146 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(pathlib.Path.cwd().parent / \"electricity_long.csv\") # get a clean version\n",
-    "varnames = ['pf', 'cl', 'loc', 'wk', 'tod', 'seas']\n",
+    "if dataset:\n",
+    "    df = pd.read_csv(pathlib.Path.cwd().parent / \"electricity_long.csv\") # get a clean version\n",
+    "else:\n",
+    "    df = pd.read_csv(\"https://raw.githubusercontent.com/arteagac/xlogit/master/examples/data/artificial_long.csv\") # Artificial Long used by xlogit benchmarking\n",
     "n_draws = 5000 # set amount of draws here\n",
-    "\n",
-    "randvars = {'pf': 'n', 'cl': 'n', 'loc': 'n', 'wk': 'n', 'tod': 'n', 'seas': 'n'}\n",
     "\n",
     "model_jax = MixedLogit()\n",
     "model_x = xlogit.MixedLogit()\n",
     "\n",
     "init_coeff = None\n",
     "\n",
-    "X = {\n",
-    "    name: {\n",
-    "        j: Variable(f\"{name}_{j}\")\n",
+    "if dataset:\n",
+    "    X = {\n",
+    "        name: {\n",
+    "            j: Variable(f\"{name}_{j}\")\n",
+    "            for j in [1,2,3,4]\n",
+    "        }\n",
+    "        for name in varnames\n",
+    "    }\n",
+    "\n",
+    "    alt_1 = Beta('alt_1', 0, None, None, 0)\n",
+    "    alt_2 = Beta('alt_2', 0, None, None, 0)\n",
+    "    alt_3 = Beta('alt_3', 0, None, None, 0)\n",
+    "    alt_4 = Beta('alt_4', 0, None, None, 1)\n",
+    "\n",
+    "    pf_mean = Beta('pf_mean', 0, None, None, 0)\n",
+    "    pf_sd = Beta('pf_sd', 1, None, None, 0)\n",
+    "    cl_mean = Beta('cl_mean', 0, None, None, 0)\n",
+    "    cl_sd = Beta('cl_sd', 1, None, None, 0)\n",
+    "    loc_mean = Beta('loc_mean', 0, None, None, 0)\n",
+    "    loc_sd = Beta('loc_sd', 1, None, None, 0)\n",
+    "    wk_mean = Beta('wk_mean', 0, None, None, 0)\n",
+    "    wk_sd = Beta('wk_sd', 1, None, None, 0)\n",
+    "    tod_mean = Beta('tod_mean', 0, None, None, 0)\n",
+    "    tod_sd = Beta('tod_sd', 1, None, None, 0)\n",
+    "    seas_mean = Beta('seas_mean', 0, None, None, 0)\n",
+    "    seas_sd = Beta('seas_sd', 1, None, None, 0)\n",
+    "\n",
+    "    pf_rnd = pf_mean + pf_sd * Draws('pf_rnd', 'NORMAL')\n",
+    "    cl_rnd = cl_mean + cl_sd * Draws('cl_rnd', 'NORMAL')\n",
+    "    loc_rnd = loc_mean + loc_sd * Draws('loc_rnd', 'NORMAL')\n",
+    "    wk_rnd = wk_mean + wk_sd * Draws('wk_rnd', 'NORMAL')\n",
+    "    tod_rnd = tod_mean + tod_sd * Draws('tod_rnd', 'NORMAL')\n",
+    "    seas_rnd = seas_mean + seas_sd * Draws('seas_rnd', 'NORMAL')\n",
+    "\n",
+    "    choice = Variable('choice')\n",
+    "\n",
+    "    V = {\n",
+    "        j: pf_rnd * X['pf'][j] + cl_rnd * X['cl'][j] + loc_rnd * X['loc'][j] + wk_rnd * X['wk'][j] + tod_rnd * X['tod'][j] + seas_rnd * X['seas'][j]\n",
     "        for j in [1,2,3,4]\n",
     "    }\n",
-    "    for name in varnames\n",
-    "}\n",
+    "else:\n",
+    "    df = pd.read_csv(\"https://raw.githubusercontent.com/arteagac/xlogit/master/examples/data/artificial_long.csv\")\n",
+    "    print(df.columns)\n",
+    "    df['choice'] = df['choice'].astype('str')\n",
+    "    mapping = {'1': 1, '2': 2, '3': 3}\n",
     "\n",
-    "alt_1 = Beta('alt_1', 0, None, None, 0)\n",
-    "alt_2 = Beta('alt_2', 0, None, None, 0)\n",
-    "alt_3 = Beta('alt_3', 0, None, None, 0)\n",
-    "alt_4 = Beta('alt_4', 0, None, None, 1)\n",
+    "    for k, v in mapping.items():\n",
+    "        df[\"aval_\"+k] = np.ones(df.shape[0])\n",
+    "        df = df.replace({'choice': mapping})\n",
+    "    \n",
+    "    database = db.Database('artificial', df)\n",
     "\n",
-    "pf_mean = Beta('pf_mean', 0, None, None, 0)\n",
-    "pf_sd = Beta('pf_sd', 1, None, None, 0)\n",
-    "cl_mean = Beta('cl_mean', 0, None, None, 0)\n",
-    "cl_sd = Beta('cl_sd', 1, None, None, 0)\n",
-    "loc_mean = Beta('loc_mean', 0, None, None, 0)\n",
-    "loc_sd = Beta('loc_sd', 1, None, None, 0)\n",
-    "wk_mean = Beta('wk_mean', 0, None, None, 0)\n",
-    "wk_sd = Beta('wk_sd', 1, None, None, 0)\n",
-    "tod_mean = Beta('tod_mean', 0, None, None, 0)\n",
-    "tod_sd = Beta('tod_sd', 1, None, None, 0)\n",
-    "seas_mean = Beta('seas_mean', 0, None, None, 0)\n",
-    "seas_sd = Beta('seas_sd', 1, None, None, 0)\n",
+    "    # Fixed params\n",
+    "    b_price = Beta('b_price', 0, None, None, 0)\n",
+    "    b_time = Beta('b_time', 0, None, None, 0)\n",
+    "    b_conven = Beta('b_conven', 0, None, None, 0)\n",
+    "    b_comfort = Beta('b_comfort', 0, None, None, 0)\n",
+    "    b_nonsig1 = Beta('b_nonsig1', 0, None, None, 0)\n",
+    "    b_nonsig2 = Beta('b_nonsig2', 0, None, None, 0)\n",
+    "    b_nonsig3 = Beta('b_nonsig3', 0, None, None, 0)\n",
     "\n",
-    "pf_rnd = pf_mean + pf_sd * Draws('pf_rnd', 'NORMAL')\n",
-    "cl_rnd = cl_mean + cl_sd * Draws('cl_rnd', 'NORMAL')\n",
-    "loc_rnd = loc_mean + loc_sd * Draws('loc_rnd', 'NORMAL')\n",
-    "wk_rnd = wk_mean + wk_sd * Draws('wk_rnd', 'NORMAL')\n",
-    "tod_rnd = tod_mean + tod_sd * Draws('tod_rnd', 'NORMAL')\n",
-    "seas_rnd = seas_mean + seas_sd * Draws('seas_rnd', 'NORMAL')\n",
+    "    price_1 = Variable('price_1')\n",
+    "    price_2 = Variable('price_2')\n",
+    "    price_3 = Variable('price_3')\n",
     "\n",
-    "choice = Variable('choice')\n",
+    "    time_1 = Variable('time_1')\n",
+    "    time_2 = Variable('time_2')\n",
+    "    time_3 = Variable('time_3')\n",
     "\n",
-    "V = {\n",
-    "    j: pf_rnd * X['pf'][j] + cl_rnd * X['cl'][j] + loc_rnd * X['loc'][j] + wk_rnd * X['wk'][j] + tod_rnd * X['tod'][j] + seas_rnd * X['seas'][j]\n",
-    "    for j in [1,2,3,4]\n",
-    "}"
+    "    conven_1 = Variable('conven_1')\n",
+    "    conven_2 = Variable('conven_2')\n",
+    "    conven_3 = Variable('conven_3')\n",
+    "\n",
+    "    comfort_1 = Variable('comfort_1')\n",
+    "    comfort_2 = Variable('comfort_2')\n",
+    "    comfort_3 = Variable('comfort_3')\n",
+    "\n",
+    "    meals_1 = Variable('meals_1')\n",
+    "    meals_2 = Variable('meals_2')\n",
+    "    meals_3 = Variable('meals_3')\n",
+    "\n",
+    "    petfr_1 = Variable('petfr_1')\n",
+    "    petfr_2 = Variable('petfr_2')\n",
+    "    petfr_3 = Variable('petfr_3')\n",
+    "\n",
+    "    emipp_1 = Variable('emipp_1')\n",
+    "    emipp_2 = Variable('emipp_2')\n",
+    "    emipp_3 = Variable('emipp_3')\n",
+    "\n",
+    "    nonsig1_1 = Variable('nonsig1_1')\n",
+    "    nonsig1_2 = Variable('nonsig1_2')\n",
+    "    nonsig1_3 = Variable('nonsig1_3')\n",
+    "\n",
+    "    nonsig2_1 = Variable('nonsig2_1')\n",
+    "    nonsig2_2 = Variable('nonsig2_2')\n",
+    "    nonsig2_3 = Variable('nonsig2_3')\n",
+    "\n",
+    "    nonsig3_1 = Variable('nonsig3_1')\n",
+    "    nonsig3_2 = Variable('nonsig3_2')\n",
+    "    nonsig3_3 = Variable('nonsig3_3')\n",
+    "\n",
+    "    aval_1 = Variable('aval_1')\n",
+    "    aval_2 = Variable('aval_2')\n",
+    "    aval_3 = Variable('aval_3')\n",
+    "\n",
+    "    # Random params\n",
+    "    u_meals = Beta('u_meals', 0, None, None, 0)\n",
+    "    u_petfr = Beta('u_petfr', 0, None, None, 0)\n",
+    "    u_emipp = Beta('u_emipp', 0, None, None, 0)\n",
+    "    sd_meals = Beta('sd_meals', 0, None, None, 0)\n",
+    "    sd_petfr = Beta('sd_petfr', 0, None, None, 0)\n",
+    "    sd_emipp = Beta('sd_emipp', 0, None, None, 0)\n",
+    "\n",
+    "    b_meals = u_meals + sd_meals*Draws('b_meals', 'NORMAL')\n",
+    "    b_petfr = u_petfr + sd_petfr*Draws('b_petfr', 'NORMAL')\n",
+    "    b_emipp = u_emipp + sd_emipp*Draws('b_emipp', 'NORMAL')\n",
+    "\n",
+    "    V1 = price_1*b_price+time_1*b_time+conven_1*b_conven+comfort_1*b_comfort+\\\n",
+    "    meals_1*b_meals+petfr_1*b_petfr+emipp_1*b_emipp+nonsig1_1*b_nonsig1+\\\n",
+    "        nonsig2_1*b_nonsig2+nonsig3_1*b_nonsig3\n",
+    "    V2 = price_2*b_price+time_2*b_time+conven_2*b_conven+comfort_2*b_comfort+\\\n",
+    "    meals_2*b_meals+petfr_2*b_petfr+emipp_2*b_emipp+nonsig1_2*b_nonsig1+\\\n",
+    "        nonsig2_2*b_nonsig2+nonsig3_2*b_nonsig3\n",
+    "    V3 = price_3*b_price+time_3*b_time+conven_3*b_conven+comfort_3*b_comfort+\\\n",
+    "    meals_3*b_meals+petfr_3*b_petfr+emipp_3*b_emipp+nonsig1_3*b_nonsig1+\\\n",
+    "        nonsig2_3*b_nonsig2+nonsig3_3*b_nonsig3\n",
+    "\n",
+    "    V = {1: V1, 2: V2, 3: V3}\n",
+    "    av = {1: aval_1, 2: aval_2, 3: aval_3}"
    ]
   },
   {
@@ -230,7 +344,7 @@
     "        optim_method=method,\n",
     "    )\n",
     "\n",
-    "    mem = memory_usage((model_jax.fit, (df[varnames], df['choice'], varnames, df['alt'], df['chid'], randvars, config)), interval=5.0, multiprocess=True)\n",
+    "    mem = memory_usage((model_jax.fit, (df[varnames], y, varnames, alts, panels, randvars, config)), interval=5.0, multiprocess=True)\n",
     "    rdf_fit.loc[len(rdf_fit)] = [name, mem]"
    ]
   },
@@ -251,7 +365,7 @@
     "        optim_method=method,\n",
     "    )\n",
     "\n",
-    "    mem = memory_usage((model_jax.fit, (df[varnames], df['choice'], varnames, df['alt'], df['chid'], randvars, config)), interval=5.0, multiprocess=True)\n",
+    "    mem = memory_usage((model_jax.fit, (df[varnames], df['choice'], varnames, df['alt'], ids, randvars, config)), interval=5.0, multiprocess=True)\n",
     "    rdf_fit.loc[len(rdf_fit)] = [name, mem]"
    ]
   },
@@ -262,7 +376,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mem_usage_x = memory_usage((model_x.fit, (df[varnames], df['choice'], varnames, df['alt'], df['chid'], randvars), \n",
+    "mem_usage_x = memory_usage((model_x.fit, (df[varnames], df['choice'], varnames, df['alt'], ids, randvars), \n",
     "                          {\"panels\": df['id'], \"n_draws\": n_draws, \"skip_std_errs\": True, \"batch_size\": None, \"optim_method\": \"L-BFGS-B\"},), interval=5.0, multiprocess=True)\n",
     "rdf_fit.loc[len(rdf_fit)] = [\"xlogit\", mem_usage_x]"
    ]
@@ -279,7 +393,7 @@
     "    logprob = log(MonteCarlo(PanelLikelihoodTrajectory(prob)))\n",
     "\n",
     "    the_biogeme = bio.BIOGEME(\n",
-    "        database_panel, logprob, number_of_draws=600, seed=999, generate_yaml=False, generate_html=False\n",
+    "        database, logprob, number_of_draws=600, seed=999, generate_yaml=False, generate_html=False\n",
     "    )\n",
     "    the_biogeme.model_name = 'model_b'\n",
     "    results = the_biogeme.estimate()\n",
