change interval to be centrall controlled and once per second for graph legibility

--- a/examples/graphs/comparison_graphs_memory.ipynb
+++ b/examples/graphs/comparison_graphs_memory.ipynb
@@ -177,6 +177,7 @@
     "else:\n",
     "    df = pd.read_csv(\"https://raw.githubusercontent.com/arteagac/xlogit/master/examples/data/artificial_long.csv\") # Artificial Long used by xlogit benchmarking\n",
     "n_draws = 5000 # set amount of draws here\n",
+    "interval = 1.0 # set frequency of memory sample (per sec)\n",
     "\n",
     "model_jax = MixedLogit()\n",
     "model_x = xlogit.MixedLogit()\n",
@@ -344,7 +345,7 @@
     "        optim_method=method,\n",
     "    )\n",
     "\n",
-    "    mem = memory_usage((model_jax.fit, (df[varnames], y, varnames, alts, panels, randvars, config)), interval=5.0, multiprocess=True)\n",
+    "    mem = memory_usage((model_jax.fit, (df[varnames], y, varnames, alts, panels, randvars, config)), interval=interval, multiprocess=True)\n",
     "    rdf_fit.loc[len(rdf_fit)] = [name, mem]"
    ]
   },
@@ -365,7 +366,7 @@
     "        optim_method=method,\n",
     "    )\n",
     "\n",
-    "    mem = memory_usage((model_jax.fit, (df[varnames], df['choice'], varnames, df['alt'], ids, randvars, config)), interval=5.0, multiprocess=True)\n",
+    "    mem = memory_usage((model_jax.fit, (df[varnames], df['choice'], varnames, df['alt'], ids, randvars, config)), interval=interval, multiprocess=True)\n",
     "    rdf_fit.loc[len(rdf_fit)] = [name, mem]"
    ]
   },
@@ -377,7 +378,7 @@
    "outputs": [],
    "source": [
     "mem_usage_x = memory_usage((model_x.fit, (df[varnames], df['choice'], varnames, df['alt'], ids, randvars), \n",
-    "                          {\"panels\": df['id'], \"n_draws\": n_draws, \"skip_std_errs\": True, \"batch_size\": None, \"optim_method\": \"L-BFGS-B\"},), interval=5.0, multiprocess=True)\n",
+    "                          {\"panels\": df['id'], \"n_draws\": n_draws, \"skip_std_errs\": True, \"batch_size\": None, \"optim_method\": \"L-BFGS-B\"},), interval=interval, multiprocess=True)\n",
     "rdf_fit.loc[len(rdf_fit)] = [\"xlogit\", mem_usage_x]"
    ]
   },
@@ -398,7 +399,7 @@
     "    the_biogeme.model_name = 'model_b'\n",
     "    results = the_biogeme.estimate()\n",
     "\n",
-    "mem_usage_biogeme = memory_usage((biogeme_running, (V, choice)), interval=1.0, multiprocess=True)\n",
+    "mem_usage_biogeme = memory_usage((biogeme_running, (V, choice)), interval=interval, multiprocess=True)\n",
     "rdf_fit.loc[len(rdf_fit)] = [\"biogeme\", mem_usage_biogeme]"
    ]
   },
