Skip biogeme on artifical dataset graphs

--- a/examples/graphs/comparison_graphs_memory.ipynb
+++ b/examples/graphs/comparison_graphs_memory.ipynb
@@ -226,7 +226,6 @@
     "    }\n",
     "else:\n",
     "    df = pd.read_csv(\"https://raw.githubusercontent.com/arteagac/xlogit/master/examples/data/artificial_long.csv\")\n",
-    "    print(df.columns)\n",
     "    df['choice'] = df['choice'].astype('str')\n",
     "    mapping = {'1': 1, '2': 2, '3': 3}\n",
     "\n",
@@ -237,13 +236,13 @@
     "    database = db.Database('artificial', df)\n",
     "\n",
     "    # Fixed params\n",
-    "    b_price = Beta('b_price', 0, None, None, 0)\n",
-    "    b_time = Beta('b_time', 0, None, None, 0)\n",
-    "    b_conven = Beta('b_conven', 0, None, None, 0)\n",
-    "    b_comfort = Beta('b_comfort', 0, None, None, 0)\n",
-    "    b_nonsig1 = Beta('b_nonsig1', 0, None, None, 0)\n",
-    "    b_nonsig2 = Beta('b_nonsig2', 0, None, None, 0)\n",
-    "    b_nonsig3 = Beta('b_nonsig3', 0, None, None, 0)\n",
+    "    b_price = Beta('b_price', 0, None, None, 1)\n",
+    "    b_time = Beta('b_time', 0, None, None, 1)\n",
+    "    b_conven = Beta('b_conven', 0, None, None, 1)\n",
+    "    b_comfort = Beta('b_comfort', 0, None, None, 1)\n",
+    "    b_nonsig1 = Beta('b_nonsig1', 0, None, None, 1)\n",
+    "    b_nonsig2 = Beta('b_nonsig2', 0, None, None, 1)\n",
+    "    b_nonsig3 = Beta('b_nonsig3', 0, None, None, 1)\n",
     "\n",
     "    price_1 = Variable('price_1')\n",
     "    price_2 = Variable('price_2')\n",
@@ -289,13 +288,15 @@
     "    aval_2 = Variable('aval_2')\n",
     "    aval_3 = Variable('aval_3')\n",
     "\n",
+    "    choice = Variable('choice')\n",
+    "\n",
     "    # Random params\n",
-    "    u_meals = Beta('u_meals', 0, None, None, 0)\n",
-    "    u_petfr = Beta('u_petfr', 0, None, None, 0)\n",
-    "    u_emipp = Beta('u_emipp', 0, None, None, 0)\n",
-    "    sd_meals = Beta('sd_meals', 0, None, None, 0)\n",
-    "    sd_petfr = Beta('sd_petfr', 0, None, None, 0)\n",
-    "    sd_emipp = Beta('sd_emipp', 0, None, None, 0)\n",
+    "    u_meals = Beta('u_meals', 0, None, None, 1)\n",
+    "    u_petfr = Beta('u_petfr', 0, None, None, 1)\n",
+    "    u_emipp = Beta('u_emipp', 0, None, None, 1)\n",
+    "    sd_meals = Beta('sd_meals', 0, None, None, 1)\n",
+    "    sd_petfr = Beta('sd_petfr', 0, None, None, 1)\n",
+    "    sd_emipp = Beta('sd_emipp', 0, None, None, 1)\n",
     "\n",
     "    b_meals = u_meals + sd_meals*Draws('b_meals', 'NORMAL')\n",
     "    b_petfr = u_petfr + sd_petfr*Draws('b_petfr', 'NORMAL')\n",
@@ -389,18 +390,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def biogeme_running(V, choice):\n",
-    "    prob = models.logit(V, None, choice)\n",
-    "    logprob = log(MonteCarlo(PanelLikelihoodTrajectory(prob)))\n",
+    "if dataset == True: # Does not work on artificial\n",
+    "    def biogeme_running(V, choice):\n",
+    "        prob = models.logit(V, None, choice)\n",
+    "        logprob = log(MonteCarlo(PanelLikelihoodTrajectory(prob)))\n",
     "\n",
-    "    the_biogeme = bio.BIOGEME(\n",
-    "        database, logprob, number_of_draws=600, seed=999, generate_yaml=False, generate_html=False\n",
-    "    )\n",
-    "    the_biogeme.model_name = 'model_b'\n",
-    "    results = the_biogeme.estimate()\n",
+    "        the_biogeme = bio.BIOGEME(\n",
+    "            database, logprob, number_of_draws=600, seed=999, generate_yaml=False, generate_html=False\n",
+    "        )\n",
+    "        the_biogeme.model_name = 'model_b'\n",
+    "        results = the_biogeme.estimate()\n",
     "\n",
-    "mem_usage_biogeme = memory_usage((biogeme_running, (V, choice)), interval=interval, multiprocess=True)\n",
-    "rdf_fit.loc[len(rdf_fit)] = [\"biogeme\", mem_usage_biogeme]"
+    "    mem_usage_biogeme = memory_usage((biogeme_running, (V, choice)), interval=interval, multiprocess=True)\n",
+    "    rdf_fit.loc[len(rdf_fit)] = [\"biogeme\", mem_usage_biogeme]"
    ]
   },
   {
