--- a/examples/graphs/comparison_graphs_timing.ipynb
+++ b/examples/graphs/comparison_graphs_timing.ipynb
@@ -464,21 +464,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for draw in quick_draws_biogeme:\n",
-    "    for i in range(trials):\n",
-    "        print(\"Using \" + \"biogeme\" + \" trial \" + str(i + 1))\n",
-    "        print(f\"starting draw {draw}\")\n",
-    "        start_time = time()\n",
-    "        prob = models.logit(V, None, choice)\n",
-    "        logprob = log(MonteCarlo(PanelLikelihoodTrajectory(prob)))\n",
+    "if dataset: # Biogeme does not work with artifical dataset\n",
+    "    for draw in quick_draws_biogeme:\n",
+    "        for i in range(trials):\n",
+    "            print(\"Using \" + \"biogeme\" + \" trial \" + str(i + 1))\n",
+    "            print(f\"starting draw {draw}\")\n",
+    "            start_time = time()\n",
+    "            prob = models.logit(V, None, choice)\n",
+    "            logprob = log(MonteCarlo(PanelLikelihoodTrajectory(prob)))\n",
     "\n",
-    "        the_biogeme = bio.BIOGEME(\n",
-    "            database, logprob, number_of_draws=draw, seed=999, generate_yaml=False, generate_html=False\n",
-    "        )\n",
-    "        the_biogeme.model_name = 'model_b'\n",
-    "        results = the_biogeme.estimate()\n",
-    "        ellapsed = time() - start_time\n",
-    "        rdf_fit.loc[len(rdf_fit)] = ['biogeme', draw, ellapsed]"
+    "            the_biogeme = bio.BIOGEME(\n",
+    "                database, logprob, number_of_draws=draw, seed=999, generate_yaml=False, generate_html=False\n",
+    "            )\n",
+    "            the_biogeme.model_name = 'model_b'\n",
+    "            results = the_biogeme.estimate()\n",
+    "            ellapsed = time() - start_time\n",
+    "            rdf_fit.loc[len(rdf_fit)] = ['biogeme', draw, ellapsed]"
    ]
   },
   {
