update graphs and add artificial data

--- a/examples/graphs/comparison_graphs_memory.ipynb
+++ b/examples/graphs/comparison_graphs_memory.ipynb
@@ -424,9 +424,9 @@
     "import pandas as pd\n",
     "\n",
     "# Dump all of rdf_fit\n",
-    "list = rdf_fit.values.tolist()\n",
-    "with open(\"comparison_data_memory_artificial.json\", \"w\") as f:\n",
-    "    json.dump(list, f)\n",
+    "# list = rdf_fit.values.tolist()\n",
+    "# with open(\"comparison_data_memory_artificial.json\", \"w\") as f:\n",
+    "#     json.dump(list, f)\n",
     "\n",
     "# Append all of rdf_fit\n",
     "# with open(\"comparison_data_memory.json\", \"r\") as f:\n",
@@ -439,11 +439,11 @@
     "#     json.dump(list, f)\n",
     "\n",
     "# Retrieve all of rdf_fit\n",
-    "# with open(\"comparison_data_memory_artificial.json\", \"r\") as f:\n",
-    "#     fit_data = json.load(f)\n",
-    "# rdf = pd.DataFrame(fit_data)\n",
-    "# rdf.columns = [\"package\", \"memory\"]\n",
-    "# rdf = pd.concat([rdf, rdf_fit], ignore_index=True)\n",
+    "with open(\"comparison_data_memory.json\", \"r\") as f:\n",
+    "    fit_data = json.load(f)\n",
+    "rdf = pd.DataFrame(fit_data)\n",
+    "rdf.columns = [\"package\", \"memory\"]\n",
+    "rdf = pd.concat([rdf], ignore_index=True)\n",
     "\n",
     "print(rdf)"
    ]
