--- a/examples/graphs/comparison_graphs_timing.ipynb
+++ b/examples/graphs/comparison_graphs_timing.ipynb
@@ -509,9 +509,9 @@
     "import pandas as pd\n",
     "\n",
     "# # Dump all of rdf_fit\n",
-    "list = rdf_fit.values.tolist()\n",
-    "with open(\"comparison_data_timing_artificial.json\", \"w\") as f:\n",
-    "    json.dump(list, f)\n",
+    "# list = rdf_fit.values.tolist()\n",
+    "# with open(\"comparison_data_timing_artificial.json\", \"w\") as f:\n",
+    "#     json.dump(list, f)\n",
     "\n",
     "# Append all of rdf_fit\n",
     "# with open(\"comparison_data_timing.json\", \"r\") as f:\n",
@@ -524,10 +524,10 @@
     "#     json.dump(list, f)\n",
     "\n",
     "# Retrieve all of rdf_fit\n",
-    "# with open(\"comparison_data_timing.json\", \"r\") as f:\n",
-    "#     fit_data = json.load(f)\n",
-    "# rdf = pd.DataFrame(fit_data)\n",
-    "# rdf.columns = [\"package\", \"draws\", \"time\"]"
+    "with open(\"comparison_data_timing.json\", \"r\") as f:\n",
+    "    fit_data = json.load(f)\n",
+    "rdf = pd.DataFrame(fit_data)\n",
+    "rdf.columns = [\"package\", \"draws\", \"time\"]"
    ]
   },
   {
@@ -542,7 +542,7 @@
     "matplotlib.rcParams.update({'font.size': 14,\n",
     "                            'axes.spines.right': False,\n",
     "                            'axes.spines.top': False})\n",
-    "libs = ['jaxlogit_scipy', 'jaxlogit_scipy_b', 'jaxlogit_jax', 'jaxlogit_jax_b', 'jaxlogit_scipy_batched', 'jaxlogit_scipy_b_batched', 'xlogit', 'biogeme']"
+    "libs = ['jaxlogit_scipy', 'jaxlogit_jax', 'jaxlogit_scipy_batched', 'xlogit', 'biogeme']"
    ]
   },
   {
